// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Caption on Android renders an image with a caption 1`] = `
<View>
  <View
    aspectRatio={1.7777777777777777}
  >
    <View
      style={
        Object {
          "height": "100%",
          "width": "100%",
        }
      }
    >
      <Image
        onLoad={[Function]}
        source={
          Object {
            "uri": "https://www.thetimes.co.uk/imageserver/image/methode%2Ftimes%2Fprod%2Fweb%2Fbin%2F7d2fd06c-a460-11e7-8955-1ad2a9a7928d.jpg?crop=1500%2C844%2C0%2C78&resize=685",
          }
        }
        style={
          Object {
            "bottom": 0,
            "height": "100%",
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
            "width": "100%",
          }
        }
      />
      <View
        onLayout={[Function]}
        style={
          Object {
            "flex": 1,
          }
        }
      >
        <View
          style={
            Object {
              "flex": 1,
            }
          }
        >
          <BVLinearGradient
            colors={
              Array [
                "#F9F9F9",
                "#EDEDED",
              ]
            }
            end={
              Object {
                "x": -0.09302964577578221,
                "y": 0.11488204504197774,
              }
            }
            locations={
              Array [
                0,
                1,
              ]
            }
            start={
              Object {
                "x": 1,
                "y": 0,
              }
            }
            style={
              Object {
                "flex": 1,
              }
            }
          />
        </View>
      </View>
    </View>
  </View>
  <View
    style={
      Object {
        "paddingTop": 10,
      }
    }
  >
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Object {
          "color": "#696969",
          "fontFamily": "GillSansMTStd-Medium",
          "fontSize": 13,
          "lineHeight": 16,
        }
      }
    >
      Some caption text goes in here
    </Text>
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Object {
          "color": "#333333",
          "fontFamily": "GillSansMTStd-Medium",
          "fontSize": 9,
          "fontWeight": "400",
          "letterSpacing": 1,
          "lineHeight": 16,
        }
      }
    >
      JUST CREDITS
    </Text>
  </View>
</View>
`;

exports[`Caption on Android renders correctly with credits 1`] = `
<View>
  <View
    style={
      Object {
        "paddingTop": 10,
      }
    }
  >
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Object {
          "color": "#696969",
          "fontFamily": "GillSansMTStd-Medium",
          "fontSize": 13,
          "lineHeight": 16,
        }
      }
    >
      Some caption text goes in here
    </Text>
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Object {
          "color": "#333333",
          "fontFamily": "GillSansMTStd-Medium",
          "fontSize": 9,
          "fontWeight": "400",
          "letterSpacing": 1,
          "lineHeight": 16,
        }
      }
    >
      JUST CREDITS
    </Text>
  </View>
</View>
`;

exports[`Caption on Android renders correctly with credits only 1`] = `
<View>
  <View
    style={
      Object {
        "paddingTop": 10,
      }
    }
  >
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Object {
          "color": "#333333",
          "fontFamily": "GillSansMTStd-Medium",
          "fontSize": 9,
          "fontWeight": "400",
          "letterSpacing": 1,
          "lineHeight": 16,
        }
      }
    >
      JUST CREDITS
    </Text>
  </View>
</View>
`;

exports[`Caption on Android renders correctly with specific styles 1`] = `
<View>
  <View
    style={
      Object {
        "backgroundColor": "red",
        "paddingTop": 10,
      }
    }
  >
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Object {
          "color": "green",
          "fontFamily": "GillSansMTStd-Medium",
          "fontSize": 13,
          "lineHeight": 16,
        }
      }
    >
      Some caption text goes in here
    </Text>
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Object {
          "color": "green",
          "fontFamily": "GillSansMTStd-Medium",
          "fontSize": 9,
          "fontWeight": "400",
          "letterSpacing": 1,
          "lineHeight": 16,
        }
      }
    >
      JUST CREDITS
    </Text>
  </View>
</View>
`;

exports[`Caption on Android renders correctly without credits 1`] = `
<View>
  <View
    style={
      Object {
        "paddingTop": 10,
      }
    }
  >
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Object {
          "color": "#696969",
          "fontFamily": "GillSansMTStd-Medium",
          "fontSize": 13,
          "lineHeight": 16,
        }
      }
    >
      Some caption text goes in here
    </Text>
  </View>
</View>
`;
